--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "license": "Apache-2.0",
     "bugs": {
         "url": "https://github.com/GitbookIO/plugin-superscript/issues"
+    },
+    "devDependencies": {
+        "gitbook-tester": "1.0.1",
+        "mocha": "2.3.4"
+    },
+    "scripts": {
+        "test": "node_modules/.bin/mocha --reporter spec --timeout 15000"
     }
 }
